# Gorbagana-Trashrush

./: .env  .gitignore  Anchor.toml  CNAME  CRITICAL_RTP_ISSUES.md  FINAL_RTP_ANALYSIS_AND_FIXES.md  README.md  RTP_VERIFICATION_REPORT.md  TrashBin DEX.html  assets.tsx  detailed-rtp-analysis.js  index-debug.tsx  index-diagnostic.tsx  index-simple.tsx  index-working.tsx  index.html  index.tsx  landing-page-backup.html  launch-strategy.md  package-lock.json  package.json  program-keypair.json.example  rtp-demo.js  simulation-runner.js  solana-release  start-app.sh  test-desktop.html  test-simple.tsx  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-B3J0Hq7n.js  index-BIKUS5HA.js  index-Dlo4_V89.js  index-DnB9erdM.js  index-XmMkJbyK.js
programs/gorbagana_slots/: Cargo.toml  info.txt
programs/gorbagana_slots/src/: lib.rs
scripts/: deploy.sh  verify-setup.sh
src/components/: App.integration.test.tsx  BlockchainSlotGame.integration.test.tsx  BlockchainSlotGame.test.tsx  BlockchainSlotGame.tsx  DesktopSlotGame.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  ErrorRecoveryIntegration.test.tsx  InitializationPrompt.test.tsx  InitializationPrompt.tsx  InlineInitializationPrompt.tsx  RTPAnalyzer.tsx  TrashCanBackground.tsx  TrashbagBackground.tsx
src/hooks/: useProgram.initialization.test.tsx  useProgram.integration.test.tsx  useProgram.test.tsx  useProgram.tsx  useWallet.integration.test.tsx  useWallet.tsx
src/utils/: blockchainOperationWrapper.test.ts  blockchainOperationWrapper.ts  errorHandler.test.ts  errorHandler.ts  index.ts  (+7 more)
(+4 files in other folders)
